--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/joy": "^5.0.0-beta.19",
     "@mui/material": "^5.15.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
